Refactor guideline rendering.

--- a/content/guidelines.haml
+++ b/content/guidelines.haml
@@ -56,24 +56,24 @@ title: "NutiKaitse"
       kaitseb.
 
     %ol.guidelines
-      = render "_guideline", :name => "authentication-strength"
-      = render "_guideline", :name => "2-factor-authentication"
-      = render "_guideline", :name => "delegated-authentication"
-      = render "_guideline", :name => "user-identity"
-      = render "_guideline", :name => "visible-passwords"
-      = render "_guideline", :name => "password-charset"
-      = render "_guideline", :name => "touch-pattern"
-      = render "_guideline", :name => "authentication-context"
-      = render "_guideline", :name => "encrypt-passwords"
-      = render "_guideline", :name => "authorization-tokens"
-      = render "_guideline", :name => "session-identifiers"
-      = render "_guideline", :name => "changing-passwords"
-      = render "_guideline", :name => "identification-permission"
-      = render "_guideline", :name => "mobile-id-code"
-      = render "_guideline", :name => "mobile-id-certificates"
-      = render "_guideline", :name => "mobile-id-messages"
-      = render "_guideline", :name => "session-logs"
-      = render "_guideline", :name => "signout"
+      = render_item "/guidelines/authentication-strength/"
+      = render_item "/guidelines/2-factor-authentication/"
+      = render_item "/guidelines/delegated-authentication/"
+      = render_item "/guidelines/user-identity/"
+      = render_item "/guidelines/visible-passwords/"
+      = render_item "/guidelines/password-charset/"
+      = render_item "/guidelines/touch-pattern/"
+      = render_item "/guidelines/authentication-context/"
+      = render_item "/guidelines/encrypt-passwords/"
+      = render_item "/guidelines/authorization-tokens/"
+      = render_item "/guidelines/session-identifiers/"
+      = render_item "/guidelines/changing-passwords/"
+      = render_item "/guidelines/identification-permission/"
+      = render_item "/guidelines/mobile-id-code/"
+      = render_item "/guidelines/mobile-id-certificates/"
+      = render_item "/guidelines/mobile-id-messages/"
+      = render_item "/guidelines/session-logs/"
+      = render_item "/guidelines/signout/"
 
 %section#data
   %center
@@ -91,22 +91,22 @@ title: "NutiKaitse"
       töötlemise põhimõtted peavad olema kirjeldatud "privaatsustingimustes".
 
     %ol.guidelines
-      = render "_guideline", :name => "data-sensitivity"
-      = render "_guideline", :name => "delicate-data"
-      = render "_guideline", :name => "principle-of-least-knowledge"
-      = render "_guideline", :name => "data-duration"
-      = render "_guideline", :name => "data-lifecycle"
-      = render "_guideline", :name => "data-encryption"
-      = render "_guideline", :name => "encryption-algorithms"
-      = render "_guideline", :name => "data-encryption-vendor"
-      = render "_guideline", :name => "data-storage"
-      = render "_guideline", :name => "data-deletion"
-      = render "_guideline", :name => "data-deletion-remotely"
-      = render "_guideline", :name => "data-backup"
-      = render "_guideline", :name => "privacy-policy"
-      = render "_guideline", :name => "data-validation"
-      = render "_guideline", :name => "digital-signature-algorithms"
-      -#= render "_guideline", :name => "data-server"
+      = render_item "/guidelines/data-sensitivity/"
+      = render_item "/guidelines/delicate-data/"
+      = render_item "/guidelines/principle-of-least-knowledge/"
+      = render_item "/guidelines/data-duration/"
+      = render_item "/guidelines/data-lifecycle/"
+      = render_item "/guidelines/data-encryption/"
+      = render_item "/guidelines/encryption-algorithms/"
+      = render_item "/guidelines/data-encryption-vendor/"
+      = render_item "/guidelines/data-storage/"
+      = render_item "/guidelines/data-deletion/"
+      = render_item "/guidelines/data-deletion-remotely/"
+      = render_item "/guidelines/data-backup/"
+      = render_item "/guidelines/privacy-policy/"
+      = render_item "/guidelines/data-validation/"
+      = render_item "/guidelines/digital-signature-algorithms/"
+      -#= render_item "/guidelines/data-server/"
 
 %section#network
   %center
@@ -124,18 +124,18 @@ title: "NutiKaitse"
       mobiilirakenduse.
 
     %ol.guidelines
-      = render "_guideline", :name => "network-encryption"
-      = render "_guideline", :name => "certificate-trust"
-      = render "_guideline", :name => "certificate-checking"
-      = render "_guideline", :name => "certificate-expiration"
-      = render "_guideline", :name => "network-usage"
-      = render "_guideline", :name => "sms"
-      = render "_guideline", :name => "nfc"
-      = render "_guideline", :name => "server-security-testing"
-      = render "_guideline", :name => "server-hardening"
-      = render "_guideline", :name => "dos"
-      -#= render "_guideline", :name => "backend-testing"
-      = render "_guideline", :name => "server-logs"
+      = render_item "/guidelines/network-encryption/"
+      = render_item "/guidelines/certificate-trust/"
+      = render_item "/guidelines/certificate-checking/"
+      = render_item "/guidelines/certificate-expiration/"
+      = render_item "/guidelines/network-usage/"
+      = render_item "/guidelines/sms/"
+      = render_item "/guidelines/nfc/"
+      = render_item "/guidelines/server-security-testing/"
+      = render_item "/guidelines/server-hardening/"
+      = render_item "/guidelines/dos/"
+      -#= render_item "/guidelines/backend-testing/"
+      = render_item "/guidelines/server-logs/"
 
 %section#app
   %center
@@ -161,25 +161,25 @@ title: "NutiKaitse"
       tagamiseks.
 
     %ol.guidelines
-      = render "_guideline", :name => "app-permissions"
-      = render "_guideline", :name => "tokens-in-code"
-      = render "_guideline", :name => "app-testing"
-      = render "_guideline", :name => "component-security"
-      = render "_guideline", :name => "component-upgrades"
-      = render "_guideline", :name => "3rd-party-input"
-      = render "_guideline", :name => "terms-of-service"
-      = render "_guideline", :name => "user-identification"
-      = render "_guideline", :name => "terms-of-service-contradictions"
-      -#= render "_guideline", :name => "nonfree-features"
-      = render "_guideline", :name => "nonfree-authentication"
-      = render "_guideline", :name => "nonfree-confirmation"
-      = render "_guideline", :name => "nonfree-usage"
-      = render "_guideline", :name => "app-store"
-      = render "_guideline", :name => "app-upgrades"
-      = render "_guideline", :name => "about"
-      = render "_guideline", :name => "feedback"
-      = render "_guideline", :name => "code-interpreter"
-      = render "_guideline", :name => "code-interpreter-sandbox"
+      = render_item "/guidelines/app-permissions/"
+      = render_item "/guidelines/tokens-in-code/"
+      = render_item "/guidelines/app-testing/"
+      = render_item "/guidelines/component-security/"
+      = render_item "/guidelines/component-upgrades/"
+      = render_item "/guidelines/3rd-party-input/"
+      = render_item "/guidelines/terms-of-service/"
+      = render_item "/guidelines/user-identification/"
+      = render_item "/guidelines/terms-of-service-contradictions/"
+      -#= render_item "/guidelines/nonfree-features/"
+      = render_item "/guidelines/nonfree-authentication/"
+      = render_item "/guidelines/nonfree-confirmation/"
+      = render_item "/guidelines/nonfree-usage/"
+      = render_item "/guidelines/app-store/"
+      = render_item "/guidelines/app-upgrades/"
+      = render_item "/guidelines/about/"
+      = render_item "/guidelines/feedback/"
+      = render_item "/guidelines/code-interpreter/"
+      = render_item "/guidelines/code-interpreter-sandbox/"
 
 %section#glossary
   %center
