--- a/content/guidelines.haml
+++ b/content/guidelines.haml
@@ -42,18 +42,7 @@ title: "NutiKaitse"
   %center
     %img.icon{:src => image_path("authentication.png")}(height=72)
     %h2 Autentimine
-    :markdown
-      Tähelepanu tuleb pöörata kasutajate autentimisele ja tagada, et
-      nutirakenduses autenditud kasutaja kasutussessioon oleks kaitstud ja seda
-      ei oleks võimalik üle võtta.
-
-      Salasõnade turvalise käsitlemise puhul tuleb arvestada, et lisaks
-      rakenduse arendamisel kasutusele võetud turvameetmetele, sõltub palju
-      sellest kuidas kasutaja ise oma seadet kaitseb, sh ekraaniluku ja
-      PIN-koodide valikust, biomeetriliste tuvastusvahendite valikust, eri
-      teenuste puhul erinevate paroolide kasutamisest ning sellest kuidas
-      kasutaja seadet võõraste kätte sattumise või kadumise eest füüsiliselt
-      kaitseb.
+    = @items["/_auth_intro/"].compiled_content
 
     %ol.guidelines
       = render_item "/guidelines/authentication-strength/"
@@ -79,16 +68,7 @@ title: "NutiKaitse"
   %center
     %img.icon{:src => image_path("data.png")}(height=72)
     %h2 Andmete kaitse seadmes
-    :markdown
-      Selleks, et viähendada seadmes asuvate andmete sh isikuandmete
-      kolmandatele osapooltele lekkimise riski, tuleb rakenduses läbi mõelda ja
-      kasutusele võtta vastavad riskide maandamise meetmed.
-
-      Euroopa Liidus on kohustuslik saada kasutaja nõusolek isikuandmete
-      töötlemiseks, sh isikutuvastusteabe kogumiseks, kui seadus ei sätesta
-      teisiti.  Kasutaja peab rakendusest leidma info või viited selle kohta
-      kuidas tema isikuandmeid töödeldakse ja milleks kasutatakse. Isikuandmete
-      töötlemise põhimõtted peavad olema kirjeldatud "privaatsustingimustes".
+    = @items["/_data_intro/"].compiled_content
 
     %ol.guidelines
       = render_item "/guidelines/data-sensitivity/"
@@ -112,16 +92,7 @@ title: "NutiKaitse"
   %center
     %img.icon{:src => image_path("network.png")}(height=72)
     %h2 Andmete kaitse võrgus
-    :markdown
-      Võrguühenduste puhul tuleks lähtuda põhimõttest, et andmete liikumine
-      nutirakenduse ja võrgusihtpunktide vahel peab toimuma läbi krüpteeritud
-      andmeedastuskanalite, sest arvutivõrgu kõik osad ei ole reeglina kasutaja
-      ja rakenduse looja kontrolli all.
-
-      Suur osa nutirakendustest eeldab töötamiseks suhtlust võrgus asuvate
-      teenusserveritega. Kui teenusserverid või ühendus nendeni ei ole
-      piisavalt turvatud, siis see annab võimaluse nende ründamiseks läbi
-      mobiilirakenduse.
+    = @items["/_network_intro/"].compiled_content
 
     %ol.guidelines
       = render_item "/guidelines/network-encryption/"
@@ -141,24 +112,7 @@ title: "NutiKaitse"
   %center
     %img.icon{:src => image_path("app.png")}(height=72)
     %h2 Rakenduse kaitse
-    :markdown
-      Rakenduse loomisel tuleb veenduda, et kasutatavad kolmandate osapoolte
-      poolt loodud tarkvara valmiskomponendid on turvalised. Samuti tuleb
-      veenduda, et liidestatavad võrguteenused on turvalised.
-
-      Nutitelefoni rakendustele saab anda automaatse juurdepääsu tasulistele
-      funktsioonide nagu telefonikõned, SMS ja MMS, rändlusandmed, NFC maksed
-      jne. Selliste eelisjuurdepääsuga rakenduste loomisel tuleb eriti
-      hoolikalt võimalikke kuritarvitusi arvesse võtta. Selgitada tuleb
-      rakenduses olevad potentsiaalsed nõrgad kohad, analüüsida mis võimalused
-      need võimalikele ründajatele annavad ja kuidas tasulistele teenustele
-      ligipääsu piirata.
-
-      Rakenduste turvaline levitamine mööda ametlikke rakenduste
-      levituskanaleid on oluline. Nutiseadmete ametlikke rakendustepoode tuleb
-      eelistada, kuna nende kaudu on kasutajatele tagatud rakenduste
-      tarkvarauuendused ning seal on kasutusel lisakontrollid turvalisuse
-      tagamiseks.
+    = @items["/_app_intro/"].compiled_content
 
     %ol.guidelines
       = render_item "/guidelines/app-permissions/"
