Remove _guidelines prefix from introduction file.

--- a/content/guidelines.haml
+++ b/content/guidelines.haml
@@ -13,7 +13,7 @@ title: "NutiKaitse"
     %img.auxlogo(alt=mkm width=240){:src => image_path("mkm.jpeg")}
 
 %section#intro
-  %center= @items["/_guidelines_intro/"].compiled_content
+  %center= @items["/_intro/"].compiled_content
 
 #toc
   %center
