--- a/layouts/guidelines.haml
+++ b/layouts/guidelines.haml
@@ -9,8 +9,9 @@
     %img.logo(alt="Nutikaitse"){:src => image_path("nutikaitse.png")}
     %h1= item[:title]
     %h2= item[:coordinator]
-    - mkm = "Majandus- ja kommunikatsiooniministeerium"
-    %img.auxlogo(alt=mkm width=240){:src => image_path("mkm.jpeg")}
+
+    - mkm_logo = find_item("/assets/images/mkm/")
+    %img.auxlogo(width=240){:alt => mkm_logo[:title], :src => mkm_logo.path}
 
 %section#intro
   %center= yield
